Correction bug ajout teammate
Correction de la valeur de l'index

+ Amélioration page accueil

--- a/assets/css/_style.scss
+++ b/assets/css/_style.scss
@@ -452,6 +452,10 @@ section {
   padding: 20px;
 }
 
+.featured-event img {
+  display: block;
+  margin: 0 auto;
+}
 
 .featured-post p {
   text-align: left;
