--- a/templates/back/post.html.twig
+++ b/templates/back/post.html.twig
@@ -8,6 +8,6 @@
     {{ form_row(form.image) }}
     {{ form_row(form.published) }}
     {{ form_row(form.content) }}
-    {{ form_row(form.save, {'attr': {'class': 'col-6 mx-auto dce-btn dce-btn-red' }}) }}
+    {{ form_row(form.save, {'attr': {'class': 'col-md-6 col-12 mx-auto dce-btn dce-btn-red' }}) }}
     {{ form_end(form) }}
 {% endblock %}
