--- a/templates/front/post.html.twig
+++ b/templates/front/post.html.twig
@@ -11,8 +11,8 @@
                     <a href="#"><i class="fab fa-facebook"></i></a>
                     <a href="#"><i class="fab fa-twitter-square"></i></a>
                 </div>
-                <div class="section-metas">
-                    <p class="article-date">Publié le {{ post.added|localizeddate('long', 'none') }}</p>
+                <div class="section-metas d-none d-md-block">
+                <p class="article-date">Publié le {{ post.added|localizeddate('long', 'none') }}</p>
                 </div>
             </div>
 
