--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -7,7 +7,7 @@
         <div class="section-header flex-column mx-auto">
             <h2 class="dce-text-dark dce-bg-light text-center underlined">Connexion</h2>
         </div>
-        <div class="single-article dce-bg-dark dce-text-light offset-3 col-md-6 text-center px-5 p-3">
+        <div class="single-article dce-bg-dark dce-text-light offset-md-3 col-md-6 col-12 text-center px-5 p-3">
 
             {% if error %}
                 <div class="alert alert-danger">
