--- a/assets/css/_style.scss
+++ b/assets/css/_style.scss
@@ -67,6 +67,10 @@ a:hover, i:hover {
 
 }
 
+img {
+  max-width: 100%;
+}
+
 .dce-btn:hover {
   color: white;
   text-decoration: none;
@@ -212,10 +216,10 @@ a:hover, i:hover {
 .carousel {
   width: 100%;
   height: 600px;
-
-  background: url(../images/carousel.jpg) no-repeat top left;
-  background-size: cover;
-
+  /*
+    background: url(../images/carousel.jpg) no-repeat top left;
+    background-size: cover;
+  */
   overflow: hidden;
 
 }
@@ -226,7 +230,9 @@ a:hover, i:hover {
 }
 
 .carousel img {
-  display: none;
+  /*display: none;*/
+  width: 100%;
+  height: auto;
 }
 
 /* Sections */
@@ -426,11 +432,10 @@ section {
   margin-bottom: 20px;
   z-index: 2;
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#1e5799+0,ffffff+0,ffffff+50,ffffff+100&0+0,1+50,0+100 */
-  background: -moz-linear-gradient(left,  rgba(255,255,255,0) 0%, rgba(255,255,255,.2) 50%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,.2) 50%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to right,  rgba(255,255,255,0) 0%,rgba(255,255,255,.2) 50%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 */
-
+  background: -moz-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, 0) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, 0) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, 0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00ffffff', endColorstr='#00ffffff', GradientType=1); /* IE6-9 */
 
   padding: 20px;
   width: 100%;
@@ -688,7 +693,7 @@ footer .row {
 .form-group {
   display: flex;
   flex-direction: column;
-  margin: 0 0 20px 20px;
+  margin: 0 0 20px 0px;
 }
 
 .dce-form label, legend {
@@ -703,13 +708,19 @@ footer .row {
   color: #eaeaea;
   background: #282828;
   padding-left: 10px;
-  width: 50%;
   border: #86190f solid 1px;
 }
 
 .dce-form input[type='submit'], .dce-form button {
   margin: auto;
-  width: 50%;
+}
+
+#booking_birthday {
+  width: 100%;
+}
+
+#booking_birthday select {
+  width: 33%;
 }
 
 .alert {
