--- a/templates/back/contact.html.twig
+++ b/templates/back/contact.html.twig
@@ -4,7 +4,7 @@
 {% block adminContent %}
     <h2 class="dce-text-dark dce-bg-light text-center underlined">Contact</h2>
     {% if message is not null %}
-        <div class="card col-12">
+        <div class="card col-12 mb-5">
             <div class="card-header">
                 <h4>Nom: {{ message.name }}</h4>
                 <h4>Prénom: {{ message.firstname }}</h4>
