--- a/templates/back/contacts.html.twig
+++ b/templates/back/contacts.html.twig
@@ -9,10 +9,10 @@
             <table class="table table-striped table-sm">
                 <thead>
                 <tr>
-                    <th>Nom</th>
-                    <th>Prénom</th>
+                    <th class="d-md-table-cell d-none">Nom</th>
+                    <th class="d-md-table-cell d-none">Prénom</th>
                     <th>Email</th>
-                    <th>Société</th>
+                    <th class="d-md-table-cell d-none">Société</th>
                     <th>Sujet</th>
                     <th>Action</th>
                 </tr>
@@ -21,10 +21,10 @@
 
                 {% for message in messages %}
                     <tr>
-                        <td>{{ message.name }}</td>
-                        <td>{{ message.firstname }}</td>
+                        <td class="d-md-table-cell d-none">{{ message.name }}</td>
+                        <td class="d-md-table-cell d-none">{{ message.firstname }}</td>
                         <td>{{ message.email }}</td>
-                        <td>{% if message.company is not empty %}{{ message.company }}{% else %}N/A{% endif %}</td>
+                        <td class="d-md-table-cell d-none">{% if message.company is not empty %}{{ message.company }}{% else %}N/A{% endif %}</td>
                         <td>{{ message.subject }}</td>
                         <td><a href="{{ path("back_contact", {"id": message.id}) }}"><i class="fas fa-eye"></i></a> -
                             <button class="btn btn-link" type="button" data-toggle="modal"
