Améliorations front et back
Front : -Récupération des contraintes de validation réservation en ajax.
              -Améliorations html/css
Back: - Ajout modification mot de passe
           - Ajout formulaire création adresse

--- a/assets/css/_style.scss
+++ b/assets/css/_style.scss
@@ -693,7 +693,7 @@ footer .row {
 .form-group {
   display: flex;
   flex-direction: column;
-  margin: 0 0 20px 0px;
+  margin: 0 0 20px 0;
 }
 
 .dce-form label, legend {
@@ -732,4 +732,8 @@ footer .row {
 .dce-form textarea {
   height: 250px;
   width: 100%;
+}
+
+.article-content img {
+  margin-right: 20px;
 }
