--- a/templates/back_template.html.twig
+++ b/templates/back_template.html.twig
@@ -119,6 +119,16 @@
                             </a>
                         </li>
                     </ul>
+                    <h6 class="sidebar-heading d-flex align-items-center px-3 mt-4 mb-1 text-muted">
+                        <i class="fas fa-cog"></i>Administration
+                    </h6>
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('back_user') }}">
+                                <i class="fas fa-key"></i>Modifier mot de passe
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </nav>
             <main role="main" class="col-md-9 ml-sm-auto offset-lg-1 pt-3 px-4">
