--- a/templates/front/home.html.twig
+++ b/templates/front/home.html.twig
@@ -150,7 +150,7 @@
                 </div>
                 <div class="section-text col-12 col-md-5 dce-text-dark">
                     <p class="">
-                        {{ post.content|raw }}
+                        {{ post.content|striptags|striptags|slice(0, 400) ~ '...' }}
                     </p>
                 </div>
             </div>
