Ajouts commentaires sur tout le code + corrections backend
Traitement supression d'un teammate dans le handler
Ajout vue formulaire création adresse et vue liste adresses

--- a/templates/back_template.html.twig
+++ b/templates/back_template.html.twig
@@ -68,6 +68,16 @@
                                 Réservations
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('back_places') }}">
+                                <i class="fas fa-map-marker-alt"></i> Adresses
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('back_place', {'id' : 'new'}) }}">
+                                Ajouter une adresse
+                            </a>
+                        </li>
                     </ul>
                     <h6 class="sidebar-heading d-flex align-items-center px-3 mt-4 mb-1 text-muted">
                         <i class="fas fa-camera-retro"></i>Galeries
