--- a/templates/front/home.html.twig
+++ b/templates/front/home.html.twig
@@ -27,7 +27,7 @@
         <div class="row">
             <div class="section-content col-12">
                 <div class="section-img col-12">
-                    <img src="{{ event.image.url }}" alt="{{ event.image.alt }}" class="img-responsive">
+                    <img src="{{ event.image.url }}" alt="{{ event.image.alt }}" class="img-responsive col-12 col-md-6">
                 </div>
             </div>
         </div>
@@ -144,7 +144,7 @@
             </h2>
         </div>
         <div class="row">
-            <div class="section-content featured-post">
+            <div class="section-content">
                 <div class="section-img col-12 col-md-6 d-none d-md-block" data-bg="{{ post.image.url }}">
                     <img src="{{ post.image.url }}" alt="{{ post.image.alt }}">
                 </div>
