--- a/templates/front/club.html.twig
+++ b/templates/front/club.html.twig
@@ -17,7 +17,7 @@
             <article>
                 <div class="article-image">
                     {% if club.image is not null %}
-                        <img src="{{ club.image.url }}" alt="{{ club.image.alt }}" class="img-fluid"/>
+                        <img src="{{ club.image.url }}" alt="{{ club.image.alt }}" class="img-responsive col-12 col-md-6 offset-md-3"/>
                     {% endif %}
                 </div>
                 <div class="article-content">
