--- a/templates/front/events.html.twig
+++ b/templates/front/events.html.twig
@@ -13,7 +13,7 @@
                 <article class="dce-bg-dark dce-text-light d-flex">
                     <div class="article-tumbnail col-md-6">
                         {% if event.image is not null %}
-                            <img src="{{ event.image.url }}" alt="{{ event.image.alt }}" class="img-fluid"/>
+                            <img src="{{ event.image.url }}" alt="{{ event.image.alt }}" class="img-responsive col-10"/>
                         {% endif %}
                     </div>
                     <div class="article-content d-flex flex-column col-md-6">
