Mise à jour READ.md et supression balises inutiles

--- a/templates/front/home.html.twig
+++ b/templates/front/home.html.twig
@@ -34,18 +34,18 @@
     </section>
     <section class="dce-bg-light col-12">
         <div class="grid grid-fluid d-flex">
-            <figure class="col-12 col-md-2"><img src="#" alt=""></figure>
-            <figure class="col-12 col-md-2"><img src="#" alt=""></figure>
-            <figure class="col-12 col-md-2"><img src="#" alt=""></figure>
-            <figure class="col-12 col-md-2"><img src="#" alt=""></figure>
-            <figure class="col-12 col-md-2"><img src="#" alt=""></figure>
-            <figure class="col-12 col-md-2"><img src="#" alt=""></figure>
-            <figure class="col-12 col-md-2"><img src="#" alt=""></figure>
-            <figure class="col-12 col-md-2"><img src="#" alt=""></figure>
-            <figure class="col-12 col-md-2"><img src="#" alt=""></figure>
-            <figure class="col-12 col-md-2"><img src="#" alt=""></figure>
-            <figure class="col-12 col-md-2"><img src="#" alt=""></figure>
-            <figure class="col-12 col-md-2"><img src="#" alt=""></figure>
+            <figure class="col-12 col-md-2"></figure>
+            <figure class="col-12 col-md-2"></figure>
+            <figure class="col-12 col-md-2"></figure>
+            <figure class="col-12 col-md-2"></figure>
+            <figure class="col-12 col-md-2"></figure>
+            <figure class="col-12 col-md-2"></figure>
+            <figure class="col-12 col-md-2"></figure>
+            <figure class="col-12 col-md-2"></figure>
+            <figure class="col-12 col-md-2"></figure>
+            <figure class="col-12 col-md-2"></figure>
+            <figure class="col-12 col-md-2"></figure>
+            <figure class="col-12 col-md-2"></figure>
         </div>
     </section>
     <section class="dce-bg-dark col-12">
