--- a/templates/front/contact.html.twig
+++ b/templates/front/contact.html.twig
@@ -21,6 +21,7 @@
                             {{ form_widget(form.content) }}
                             {{ form_errors(form.content) }}
                         </div>
+                        {{ form_widget(form._token) }}
                         {{ form_row(form.save) }}
                     </div>
                 </div>
