--- a/templates/front/event.html.twig
+++ b/templates/front/event.html.twig
@@ -54,6 +54,7 @@
                                 {{ form_errors(form.agreeTerms) }}
                             </div>
                             {{ form_row(form.agreeDatas) }}
+                            {{ form_widget(form._token) }}
                             {{ form_row(form.save) }}
                         </div>
                     </div>
